# nanos

./: .gitignore  Cargo.toml  Makefile  README.md  agent.nano  agent_js.nano  fleet.nano  instruction.txt  nanos-pitch.md  nanos_memory.db  package-lock.json  package.json  test_agent.ts
.github/workflows/: ci.yml
benchmarks/: README.md  docker_vs_host.py  honest_benchmark_report.md  http_bench.py  run_benchmark.sh  run_honest_benchmark.py
docs/: ffi-spec.md  nanos-architecture.md  nanos-comparison.md  syscall-abi.md
examples/: agent.nano  bench_local.nano  bench_local_cpu_qwen05b.nano  bench_local_hybrid_qwen05b.nano  bench_local_qwen05b.nano  bench_mlx.nano  bench_rust.nano  bench_rust_qwen.nano  bench_tmp.nano  fleet.nano  fleet_orchestrator.nano  mcp_ping_server.js  mcp_server_caller.nano  mcp_server_caller.ts  mcp_test.nano  security_violation.nano  security_violation.ts  test_agent.ts  test_e2e.nano
nanos-core-agent/: Cargo.toml  build.rs
nanos-core-agent/src/: lib.rs
nanos-sdk/: README.md  index.js  package.json  test_publish.sh
src/: cli.rs  dashboard.rs  lib.rs  llm.rs  main.rs  manifest.rs  mcp_client.rs  network.rs  orchestrator.rs  rust_llama.rs  sandbox.rs  server.rs  trace.rs
src/web/: index.html
