[package]
name = "nanos"
version = "0.1.0"
edition = "2024"
description = "Lightweight, process-isolated WebAssembly micro-runtime for sandboxed AI agents with native GPU (Metal & CUDA) offload"
license = "Apache-2.0"

[lib]
name = "nanos"
path = "src/lib.rs"

[[bin]]
name = "nanos"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
llama-cpp-2 = "0.1.146"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = { version = "2.9", features = ["json"] }
wasmtime = "45.0.0"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
rayon = "1.9"

[features]
gpu-cuda = ["llama-cpp-2/cuda"]

